kubernetes/fluxcd/apps/base/monitoring/kube-prometheus-stack/alertmanager-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager 
          port: 9093
    - match: Host(`alertmanager.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-alertmanager 
          port: 9093
  tls:
    secretName: alertmanager-certificate-secret
