kubernetes/fluxcd/apps/base/monitoring/kube-prometheus-stack/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana 
          port: 80
    - match: Host(`grafana.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana 
          port: 80
  tls:
    secretName: grafana-certificate-secret
